--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body {
     display: inline-block;
     text-transform: uppercase;
     color: white;
+    text-decoration: none;
 }
 .grey-text {
     color: grey;
@@ -115,6 +116,15 @@ nav {
     margin-bottom: 20px;
 }
 /* END HEADER */
+/* HELP */
+.help {
+    position: fixed;
+    bottom: 0;
+    right: 10%;
+    z-index: 1;
+    padding: 8px 5px;
+}
+
 
 /* MAIN */
 main {
@@ -189,4 +199,14 @@ footer {
 .footer-left,
 .footer-right {
     width: 50%;
+}
+.footer-left h2 {
+    margin-left: 80px;
+}
+
+.footer-right {
+    text-align: right;
+}
+.footer-select > * {
+    margin-left: 20px;
 }
