--- a/css/style.css
+++ b/css/style.css
@@ -210,3 +210,9 @@ footer {
 .footer-select > * {
     margin-left: 20px;
 }
+select#sex-type {
+    padding-right:20px ;
+    border: none;
+    border-bottom: 1px solid black;
+    background-color: lightgrey;
+}
