--- a/css/style.css
+++ b/css/style.css
@@ -72,13 +72,10 @@ header {
 /* Nav and Menu */
 .logo {
     width: 10%;
-    margin-right: 40px;
-}
-.logo img {
-    width: 100px;
 }
 .menu-center {
-    width: 45%;
+    width: 50%;
+    padding-left: 40px;
 }
 .menu-right {
     width: 40%;
@@ -90,13 +87,13 @@ header {
 .menu li {
     display: inline-block;
     margin-left: 35px;
-    line-height: 40px;
+    line-height: 60px;
 }
 .menu li a {
     text-decoration: none;
     color: white;
     text-transform: uppercase;
-    font-size: 11px;
+    font-size: 12px;
 }
 .login {
     border: 1px solid white;
