--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,7 @@ body {
 }
 .container {
     width: 80%;
-    margin: auto;
-    position: relative;
+    margin: auto;    
 }
 .float-left {
     float: left;
@@ -68,6 +67,9 @@ header {
     background-size: 1000px;
     background-repeat: no-repeat;
     background-position: 107% 110%;
+}
+header .container{
+    position: relative;
 }
 /* Nav and Menu */
 .logo {
